Fix overlapping navbar issues

--- a/src/assets/stylesheets/abstracts/_variables.scss
+++ b/src/assets/stylesheets/abstracts/_variables.scss
@@ -22,6 +22,7 @@ $color-grey-dark: #404041;
 $color-transparent: rgba(0, 0, 0, 0.25);
 
 $color-link-blue: #0095f6;
+$color-nav-border: #e5e5e5;
 
 // FONT
 $default-font-size: 1.6rem;
